RESOLVED FIXED207513
[iOS] REGRESSION (r255592): The simulated mouse event dispatch quirk should not be on by default
https://bugs.webkit.org/show_bug.cgi?id=207513
Summary [iOS] REGRESSION (r255592): The simulated mouse event dispatch quirk should n...
Wenson Hsieh
Reported 2020-02-10 15:43:14 PST
Attachments
Patch (1.58 KB, patch)
2020-02-10 15:48 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-10 15:48:40 PST
WebKit Commit Bot
Comment 2 2020-02-10 16:22:24 PST
Comment on attachment 390304 [details] Patch Clearing flags on attachment: 390304 Committed r256228: <https://trac.webkit.org/changeset/256228>
WebKit Commit Bot
Comment 3 2020-02-10 16:22:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.