Cherry-pick r256228. rdar://problem/59336278

[iOS] REGRESSION (r255592): The simulated mouse event dispatch quirk should not be on by default
    https://bugs.webkit.org/show_bug.cgi?id=207513
    <rdar://problem/59326119>

    Reviewed by Tim Horton.

    Turn `shouldDispatchSimulatedMouseEvents` back off by default (r255592 enabled it by default on all web pages).

    * page/Quirks.cpp:
    (WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):

    Canonical link: https://commits.webkit.org/220503@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256228 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/220422.3@safari-610.1.3-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.3-branch@256239 268f45cc-cd09-0410-ab3c-d52691b4dbfc